# RayTracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
assimp-5.0.1/: CMakeLists.txt
glfw-3.3.2/: CMakeLists.txt
input_files/: simple_knife.fbx
input_files/defaultScene/: stanford_bunny.fbx  unit_sphere_cam.fbx  xyz.fbx
input_files/testScene/: 2020_plane_light.fbx  unit_sphere.fbx
src/: AABBTree.cpp  AABBTree.h  CMakeLists.txt  cameras.cpp  cameras.h  deprecated.cpp  dirent.h  fast_math.cpp  fast_math.h  geometry.cpp  geometry.h  lights.cpp  lights.h  main.cpp  materials.cpp  materials.h  options.txt  rasterizer.cpp  rasterizer.h  ray.cpp  ray.h  raypool.cpp  raypool.h  render_thread.cpp  render_thread.h
src/shaders/: basic_shaders.cpp  basic_shaders.h  layered_toon_shader.h  sketch_shader.h  translucent_shader.h
testScene/: unit_cube.fbx  unit_cylinder.fbx
